--- a/FlexBox/index.html
+++ b/FlexBox/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="flexContainer">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto quisquam mollitia iusto excepturi unde deleniti pariatur dolorem alias ea itaque vero velit aperiam magnam veniam, debitis ipsam, illo molestiae aliquam.</p>
-        <p>Odit inventore doloribus pariatur minus quae nulla fugiat in commodi at perspiciatis, est beatae mollitia sequi aut facere dignissimos qui, magnam, culpa ad. Quas error delectus magnam quo, molestiae asperiores?</p>
-        <p>Recusandae, amet. Quia, dolorem? Dolorum repudiandae explicabo ducimus pariatur eveniet cupiditate repellendus voluptatum quia repellat, accusantium libero ea sed natus nostrum odio veritatis cumque a corporis sequi consectetur, quibusdam itaque.</p>
+        <p id="b1">BOX1</p>
+        <p id="b2">BOX2</p>
+        <p id="b3">BOX3</p>
     </div>
 </body>
 </html>
